--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,6 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -47,24 +38,22 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin-bottom: 15px;
+  color: white;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: #cccccc66;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.notification-wrapper {
+  width: 600px;
+  margin: 20px auto;
+  border: 1px solid #cccccc66;
+  border-radius: 5px;
 }
